src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-dhP0.5-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault window height: P0.5\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 607 × 336, bounds: 1239 × 688, states: [Activated]
